# service-trader-proto

./: .editorconfig  .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
proto/trader/: balance.proto  balance_entry.proto  balance_entry_source.proto  campaign.proto  campaign_action.proto  campaign_profit.proto  campaign_wallet.proto  common.proto  scenario.proto  scenario_action.proto  scenario_profit.proto  scenario_wallet.proto  setting.proto  strategy.proto  track.proto  trader_coin.proto
scripts/: fix_python_imports.py
